# ui_games

./: .gitignore  README.md  db.sqlite3  pyproject.toml
apps/core/: urls.py  views.py
apps/core/templates/core/: index.html
apps/tic_tac_toe/: apps.py  models.py  urls.py  views.py
apps/tic_tac_toe/forms/: room.py
apps/tic_tac_toe/migrations/: 0001_initial.py  0002_rename_tictactoeroom_room.py
apps/tic_tac_toe/templates/tic_tac_toe/: index.html
apps/tic_tac_toe/templates/tic_tac_toe/room/: room.html
apps/tic_tac_toe/views/: menu.py  room.py
apps/users/: urls.py  views.py
apps/users/static/css/: login.css
apps/users/templates/registration/: login.html
config/: settings.py  urls.py
core/: settings.py
templates/: base.html
