[tool.poetry]
name = "ui-games"
version = "0.1.0"
description = ""
authors = ["Doppelgangeres <artyom.kovalenko003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.1"
django-filter = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
